<resources>
    <string name="app_name">print.io</string>
    <string name="share_app_text">I\'m using PrintIO! You can download it from http://www.print.io/our-app</string>
    <string name="upgrade_to">PrintIO has been upgraded to %1$s, we recommend you to update now?</string>
    <string name="upgrade_to_force_upgrade">PrintIO has been upgraded to %1$s, it is a critical update and you must update in order to continue!</string>
    <string name="menu_settings">Settings</string>
    <string name="choose_country">Choose Country</string>
    <string name="store">Store</string>
    <string name="my_albums">My Albums</string>
    <string name="view_chart">View Chart</string>
    <string name="new_photos">New Photos</string>
    <string name="log_in_to_facebook">Log In To Facebook</string>
    <string name="log_in_to_instagram">Log In To Instagram</string>
    <string name="log_in_to_pinterest">Log In To Pinterest</string>
    <string name="log_in_to_photobucket">Log In To Photobucket</string>
    <string name="photobucket_login">Photobucket Login</string>
    <string name="photobucket_server_error">Photobucket is temporarily unavailable. Please try later.</string>
    <string name="photobucket_error_loading_albums">Cannot load Photobucket albums. Please try later.</string>
    <string name="photobucket_error_loading_photos">Cannot load Photobucket photos. Please try later.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="success_login_instagram">Successfully logged in to Instagram</string>
    <string name="success_login_picasa">Successfully logged in to Picasa</string>
    <string name="success_login_flickr">Successfully logged in to Flickr</string>
    <string name="success_login_dropbox">Successfully logged in to Dropbox</string>
    <string name="success_login_photobucket">Successfully logged in to Photobucket</string>
    <string name="enter_username_and_password">Please enter your username and password</string>
    <string name="wrong_username_or_password">You have entered a wrong username or password</string>
    <string name="other">Other</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="shipping_to">Will you be shipping to %1$s?</string>
    <string name="shipping_to_drop_down">SHIPPING TO: </string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="exit">Exit</string>
    <string name="starting_at">Starting at %s</string>
    <string name="metal_magnets_price">%s Each</string>
    <string name="title_featured_products">Featured Products</string>
    <string name="view_all_products">View All Products</string>
    <string name="all_products">All Products</string>
    <string name="all">All</string>
    <string name="product_details">Product Details</string>
    <string name="choose">Choose</string>
    <string name="you_get">You get 1 tinybook with 10 images</string>
    <string name="text_star_1">Each book has 24 photos and you get 3 books with each order.</string>
    <string name="text_star_2">If you choose Instagram photos, you\'ll get 3 of the Same book, choose 72 images for 3 Unique books.</string>
    <string name="text_star_3">Tinybooks measure only 1.7 inches x 1.5 inches (37mm x 44mm).</string>
    <string name="image_upload">Image Upload</string>
    <string name="phone">Phone</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_photos_of_me">Photos of Me</string>
    <string name="facebook_photos_of_friends">Photos of Friends</string>
    <string name="flickr">Flickr</string>
    <string name="picasa">Picasa</string>
    <string name="dropbox">Dropbox</string>
    <string name="photobucket">Photobucket</string>
    <string name="customize_product">Customize Product</string>
    <string name="customize_product_tooltip_text">Double click photo to edit</string>
    <string name="product_price">Product Price</string>
    <string name="select_your_options">Select Your Options</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="crop_image">Crop Image</string>
    <string name="pinch_to_zoom">Pinch To Zoom</string>
    <string name="product_preview">Product Preview</string>
    <string name="choose_print_type">Choose print type</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="add_more_products">Add More Products</string>
    <string name="total_price">Total Price</string>
    <string name="order_summary">Order Summary</string>
    <string name="sub_total">Subtotal</string>
    <string name="promo_code">Promo Code</string>
    <string name="tax">Tax</string>
    <string name="free">Free</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="star">&#9733;</string>
    <string name="shopping_methods">Shipping Methods and Calculation</string>
    <string name="fill_address">Please fill in your Shipping Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="telephone_number">Phone Number</string>
    <string name="checkout">Check Out</string>
    <string name="billing_country">Billing Country</string>
    <string name="united_states">United States</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="card_information">Card Information</string>
    <string name="card_number">Card Number</string>
    <string name="cvc">CVC or CVS</string>
    <string name="enter_cvc">Enter CVC or CVS please!</string>
    <string name="expiration_month">Expiration Month</string>
    <string name="exp_month_not_valid">Expiration month is not valid!</string>
    <string name="expiration_year">Expiration Year</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="is_business_address">Is business address?</string>
    <string name="same_as">Same as Shipping Address</string>
    <string name="invalid_coupon">Coupon code is not valid!</string>
    <string name="enter_promo_code">Please enter promo code.</string>
    <string name="coupon_not_applied">Sorry, this coupon does not apply to the items in your cart.</string>
    <string name="coupon_applied">Coupon has been applied. You saved a </string>
    <string name="coupon_savings">Savings:</string>
    <string name="ship_discount">Ship Discount</string>
    <string name="place_order">Place Order</string>
    <string name="enter_payment_info">Enter Payment Info</string>
    <string name="address">Address</string>
    <string name="select_photos_from">Tap icons to get images</string>
    <string name="multiphoto_upload"><b>Multi Photo Upload</b>\nYou have chosen a multi photo design. Please click your desired image source above. As you add images from your sources above the number of photos below will be counted. When you are ready to make the product please click the customize product button.</string>
    <string name="singlephoto_upload"><b>Single Photo Upload</b>\nYou have chosen an item that only needs one image to complete the design. Please select an image source above, log-in if necessary to your desired photo source, and then push the customize product button </string>
    <string name="quantity">Quantity</string>
    <string name="preview">Preview</string>
    <string name="edit">Edit</string>
    <string name="paypal">Paypal</string>
    <string name="company">Company</string>
    <string name="photos">Photos</string>
    <string name="photo">Photo</string>
    <string name="magnet">Magnet</string>
    <string name="magnets">Magnets</string>
    <string name="sticker">Sticker</string>
    <string name="stickers">Stickers</string>
    <string name="coaster">Coaster</string>
    <string name="coasters">Coasters</string>
    <string name="edit_tools">Edit Tools</string>
    <string name="case_type">Case Type</string>
    <string name="layout">Layout</string>
    <string name="back">Back</string>
    <string name="back_side">Back Side</string>
    <string name="front_side">Front Side</string>
    <string name="canvas_wraps_help_text">Dotted line shows canvas sides</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="prev">Prev</string>
    <string name="autofill">Do you need to make a random or manual autofill!</string>
    <string name="random">Random Auto Arrange</string>
    <string name="manual">Manual Drag and Drop</string>
    <string name="fill_in">Please fill in your Shipping Address</string>
    <string name="fedex">FedEX</string>
    <string name="find_shipping_address">Find Shipping Address</string>
    <string name="order">Order</string>
    <string name="need_to_share">Share this deal with your Facebook Friends to get this great $1 deal!</string>
    <string name="fb_canvas_share_text">I just purchased canvas wraps for $1 at print.io! Check them out, it\'s ending soon!</string>
    <string name="empty_first_name">\'First name\' should not be empty</string>
    <string name="empty_last_name">\'Last name\' should not be empty</string>
    <string name="empty_email">\'Email\' should not be empty</string>
    <string name="empty_state">\'State\' should not be empty</string>
    <string name="empty_zip_code">\'Zip code\' should not be empty</string>
    <string name="empty_city">\'City\' should not be empty</string>
    <string name="empty_address1">\'Address 1\' should not be empty</string>
    <string name="empty_area_num">\'Area num\' should not be empty</string>
    <string name="empty_telephone_num">\'Telephone num\' should not be less then 10 digits</string>
    <string name="empty_name">\'Name\' should not be empty</string>
    <string name="empty_street">\'Street\' should not be empty</string>
    <string name="error_getting_country_list">Cannot download countries list</string>
    <string name="error_uploading_product">Cannot upload product</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="auto_arrange_text">Want us to do this automatically\nor\nManually arrange them yourself</string>
    <string name="auto_arrange_note">Note: Both options allow you to finalize\nthe arrangement manually.</string>
    <string name="random_auto_arrange">Auto Random\nArrange</string>
    <string name="manual_drag_drop">Manual\nDrag and Drop</string>
    <string name="pinch_pan">Pinch to Zoom / Pan to Move</string>
    <string name="phone_and_tablet_info_text_image_manip">Image should fill box - Because image wraps around side of case</string>
    <string name="zoom">Zoom</string>
    <string name="move">Move</string>
    <string name="photo_arrangement">Photo Arrangement</string>
    <string name="close">Close</string>
    <string name="tabbar_info">Info</string>
    <string name="tabbar_rotate">Rotate</string>
    <string name="tabbar_edit_text">Edit Text</string>
    <string name="tabbar_effects">Effects</string>
    <string name="review_quantity_cropping">Image Quantity and Cropping</string>
    <string name="double_tap_stickerbook">Double-tap any photo to adjust the crop.</string>
    <string name="random_stickerbook">Images will print in random order.</string>
    <string name="click_question_mark">Click the question mark for help.</string>
    <string name="delete_address">Delete this address?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>