<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white"
    android:minWidth="300dip"
    android:orientation="vertical"
    android:padding="16dip" >

    <print.io.view.TextViewFontLight
        android:id="@+id/textview_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="10dip"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="2dip"
        android:text="@string/log_in_to_photobucket"
        android:textColor="#5a5d66"
        android:textSize="@dimen/text_size_title" />

    <print.io.view.EditTextFontLight
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:nextFocusForward="@+id/edittext_password" />

    <print.io.view.EditTextFontLight
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:nextFocusForward="@+id/button_login" />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <print.io.view.ButtonFontLight
            android:id="@+id/button_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_light"
            android:lineSpacingExtra="1dp"
            android:paddingBottom="8dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="8dip"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

        <print.io.view.ButtonFontLight
            android:id="@+id/button_login"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:background="@drawable/btn_green"
            android:lineSpacingExtra="1dp"
            android:paddingBottom="8dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="8dip"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>