<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aa000000"
    android:clickable="true"
    android:visibility="visible" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="14dip"
        android:background="@drawable/bg_white"
        android:paddingBottom="10dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:paddingTop="20dip" >

        <print.io.view.TextViewFontBold
            android:id="@+id/textview_arrangement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/photo_arrangement"
            android:textColor="#5a5d66"
            android:textSize="@dimen/text_size_normal" />

        <print.io.view.TextViewFontLight
            android:id="@+id/textview_auto_arrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_arrangement"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:text="@string/auto_arrange_text"
            android:textColor="#5a5d66"
            android:textSize="@dimen/text_size_normal" />

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_auto_arrange"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <print.io.view.ButtonFontLight
                android:id="@+id/button_random"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="9dip"
                android:layout_weight="1"
                android:background="@drawable/btn_blue_light"
                android:drawableTop="@drawable/icon_random_big"
                android:onClick="onClickRandomAutoArrange"
                android:paddingBottom="14dip"
                android:paddingTop="14dip"
                android:text="@string/random_auto_arrange"
                android:textColor="@color/primary_button_text"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <print.io.view.ButtonFontLight
                android:id="@+id/button_manual"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dip"
                android:layout_weight="1"
                android:background="@drawable/btn_green"
                android:drawableTop="@drawable/icon_drag_and_drop"
                android:onClick="onClickManualDragDrop"
                android:paddingBottom="14dip"
                android:paddingTop="14dip"
                android:text="@string/manual_drag_drop"
                android:textColor="@color/secondary_button_text"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />
        </LinearLayout>

        <print.io.view.TextViewFontLight
            android:id="@+id/textview_auto_arrange_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_buttons"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/auto_arrange_note"
            android:textColor="#5a5d66"
            android:textSize="@dimen/text_size_small" />
    </RelativeLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/item_help"
        android:visibility="gone" />

</RelativeLayout>