<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aa000000"
    android:clickable="true" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="15dip"
        android:background="@drawable/bg_white"
        android:padding="20dip" >

        <print.io.view.TextViewFontLight
            android:id="@+id/textview_delete_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:padding="15dip"
            android:text="@string/delete_address"
            android:textColor="#5a5d66"
            android:textSize="@dimen/text_size_large" />

        <LinearLayout
            android:id="@+id/layout_yes_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_delete_confirmation"
            android:orientation="horizontal" >

            <print.io.view.ButtonFontLight
                android:id="@+id/button_no"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="9dip"
                android:layout_weight="1"
                android:background="@drawable/btn_blue_light"
                android:onClick="onClickNoDeleteConfirmation"
                android:padding="14dip"
                android:text="@string/no"
                android:textColor="@color/primary_button_text"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <print.io.view.ButtonFontLight
                android:id="@+id/button_yes"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dip"
                android:layout_weight="1"
                android:background="@drawable/btn_green"
                android:onClick="onClickYesDeleteConfirmation"
                android:padding="14dip"
                android:text="@string/yes"
                android:textColor="@color/secondary_button_text"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>